pod-security-cel/baseline/disallow-probes-host/disallow-probes-host.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-probes-host
  annotations:
    policies.kyverno.io/title: Disallow the host field in probes and lifecycle hooks in CEL
    policies.kyverno.io/category: Pod Security Standards (Baseline) in CEL
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.11.0
    kyverno.io/kubernetes-version: "1.34-1.37"
    policies.kyverno.io/description: >-
      The `host` field is used for allowing users to specify another entity other than the podIP
      (which is the default value) to which Kubelet should perform probes to. However this
      opens it up for security attacks since the `host`` field can be set to pretty much any
      value in the system including security sensitive external hosts or localhost on the node.
      Kubelet will be probing this set `host` value which can lead to blind SSRF attacks.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: probes-host
      match:
        any:
        - resources:
            kinds:
              - Pod
            operations:
            - CREATE
            - UPDATE
      validate:
        cel:
          variables:
            - name: allContainers
              expression: >-
                object.spec.containers +
                (has(object.spec.initContainers) ? object.spec.initContainers : [])
          expressions:
            - expression: >-
                variables.allContainers.all(container,
                  [
                    container.?livenessProbe.orValue({}),
                    container.?readinessProbe.orValue({}),
                    container.?startupProbe.orValue({}),
                    container.?lifecycle.?postStart.orValue({}),
                    container.?lifecycle.?preStop.orValue({})
                  ].all(probe,
                    probe.?httpGet.?host.orValue("") == "" &&
                    probe.?tcpSocket.?host.orValue("") == ""
                  )
                )
              message: >-
                The `host` field in probes and lifecycle hooks is disallowed. The fields
                spec.containers[*].livenessProbe.httpGet.host, spec.containers[*].readinessProbe.httpGet.host,
                spec.containers[*].startupProbe.httpGet.host, spec.containers[*].livenessProbe.tcpSocket.host,
                spec.containers[*].readinessProbe.tcpSocket.host, spec.containers[*].startupProbe.tcpSocket.host,
                spec.containers[*].lifecycle.postStart.tcpSocket.host, spec.containers[*].lifecycle.preStop.tcpSocket.host,
                spec.containers[*].lifecycle.postStart.httpGet.host, spec.containers[*].lifecycle.preStop.httpGet.host,
                spec.initContainers[*].livenessProbe.httpGet.host, spec.initContainers[*].readinessProbe.httpGet.host,
                spec.initContainers[*].startupProbe.httpGet.host, spec.initContainers[*].livenessProbe.tcpSocket.host,
                spec.initContainers[*].readinessProbe.tcpSocket.host, spec.initContainers[*].startupProbe.tcpSocket.host,
                spec.initContainers[*].lifecycle.postStart.tcpSocket.host, spec.initContainers[*].lifecycle.preStop.tcpSocket.host,
                spec.initContainers[*].lifecycle.postStart.httpGet.host, spec.initContainers[*].lifecycle.preStop.httpGet.host
                must either be undefined or set to an empty string.
